# priors

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: wire-claude.sh
src/priors/: __main__.py  cli.py  config.py  digest.py  doctor.py  drafts.py  effectiveness.py  embeddings.py  indexing.py  mcp_server.py  paths.py  retrieval.py  schema.py  stacks.py  store.py  templates.py  triggers.py
src/priors/adapters/: __init__.py  agents.py  base.py  claude_code.py  codex.py
tests/: conftest.py  test_adapters.py  test_cli.py  test_digest.py  test_doctor.py  test_drafts_guards.py  test_effectiveness.py  test_embeddings.py  test_integration_sync.py  test_mcp_tools.py  test_retrieval.py  test_review_cli.py  test_schema.py  test_stacks.py  test_store.py  test_triggers.py
