[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "priors"
version = "0.1.0"
description = "Local memory for AI-coding lessons learned"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "thuva4" }]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "python-frontmatter>=1.1",
    "numpy>=1.26",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=2.7",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
priors = "priors.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/priors"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.coverage.run]
branch = true
source = ["priors"]
